added links to menu and fixed images

--- a/contactanos.html
+++ b/contactanos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Conexión Valle</title>
-    <link rel="stylesheet" href="cprueba.css">
+    <link rel="stylesheet" href="contactanos.css">
     <script src="cprueba.js" defer></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -15,15 +15,15 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="con2.png" alt="Logo">
+                <img src="img/Logo.webp" alt="">
             </div>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="./">Sobre nosotros</a></li>
                 <li><a href="#">Directorio de Emprendedores</a></li>
                 <li><a href="#">Promoción/Productores y Servicios</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="./faq.html">FAQ</a></li>
+                <li><a href="./contactanos.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
         <div class="divider"></div>
 
         <div class="contact-image">
-            <img src="con1.png" alt="Holi" width = "200" height="400"> <br>
+            <img src="img/VendedorPapas.jpeg" alt="Holi" width = "200" height="400"> <br>
         </div>
 
         <div class="contact-container">
@@ -69,7 +69,7 @@
     </section>
     <footer>
         <div class="footer-logo">
-            <img src="con2.png" alt="Logo Conexión Valle">
+            <img src="./img/Logo.webp" alt="Logo Conexión Valle">
         </div>
     </footer>
     <!-- Sección del Mapa -->
@@ -95,6 +95,6 @@
 
 </body>
 <a href="https://wa.me/+573245772397" class="whatsapp-icon" target="_blank">
-    <img src="whatsapp.jfif" alt="WhatsApp">
+    <img src="./img/whatshapIcon.jpeg" alt="WhatsApp">
 </a>
 </html>
