--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="stilosfaq.css"> <!--para enlazar html con css-->
+    <link rel="stylesheet" href="faq.css"> <!--para enlazar html con css-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -10,26 +10,19 @@
     <title>Red De Apoyo Local</title>
 </head> 
 <body>
-    <div class="menu">
-        <ol>
-            <li>Inicio</li>
-        </ol>
-        <ol>
-            <li>Sobre nosotros</li>
-        </ol>
-        <ol>
-            <li>Directorio de emprendedores</li>
-        </ol>
-        <ol>
-            <li>Agents</li>
-        </ol>
-        <ol>
-            <li>FAQ</li>
-        </ol>
-        <ol>
-            <li>Contacto</li>
-        </ol>
-    </div>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="/img/Logo.webp" alt="Logo">
+        </div>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="./">Sobre nosotros</a></li>
+            <li><a href="#">Directorio de Emprendedores</a></li>
+            <li><a href="#">Promoción/Productores y Servicios</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./contactanos.html">Contacto</a></li>
+        </ul>
+    </nav>
     <H1>FAQ</H1><br>
     <H2>PREGUNTAS FRECUENTES</H2><br>
     <br>
@@ -109,7 +102,7 @@
     </tbody>
   </table>
   <br><br><br><br><br><br><br><br><br><br><br><br>
-<img src="./faq1.png" alt="Holi" width = "600" height="500"> <br>
+<img class="imgFresas" src="./img/vendedoraFresas.jpeg" alt="Holi" width = "600" height="500"> <br>
 <br><br><br><br><br><br>
 <h3>+57 604 XXX XXX XX</h3><br>
 <h4>VAMOS A ENCONTRARTE JUNTOS EL LUGAR QUE TE MERECES</h4>
