--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <img src="/img/Logo.webp" alt="Logo">
         </div>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Sobre nosotros</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="./">Sobre nosotros</a></li>
             <li><a href="#">Directorio de Emprendedores</a></li>
             <li><a href="#">Promoción/Productores y Servicios</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./contactanos.html">Contacto</a></li>
         </ul>
     </nav>
     <!-- Hero -->
