fixed minor probl in sobreNosotros and Promocion

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="./">Sobre nosotros</a></li>
+            <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
             <li><a href="#">Directorio de Emprendedores</a></li>
-            <li><a href="#">Promoción/Productores y Servicios</a></li>
+            <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
             <li><a href="./faq.html">FAQ</a></li>
             <li><a href="./contactanos.html">Contacto</a></li>
         </ul>
