--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <img src="img/logo.jpg" alt="Logo">
+            <img src="img/Logo.webp" alt="Logo">
         </div>
         <ul>
             <li><a href="#">Inicio</a></li>
@@ -74,7 +74,7 @@
 
     <!-- Imagen final -->
     <div class="imagen-final">
-        <img src="img/logo.jpg" alt="Conexión Valle">
+        <img src="img/Logo.webp" alt="Conexión Valle">
     </div>
     <footer class="footer">
         <div class="footer-container">
@@ -86,7 +86,7 @@
     </footer>
     
     <a href="https://wa.me/+573245772397" class="whatsapp-icon" target="_blank">
-        <img src="img/wasa.jpg" alt="WhatsApp">
+        <img src="img/whatshapIcon.jpeg" alt="WhatsApp">
     </a>
     
 </body>
