estilice el menu, arregle las imagenes y añadi algunos estilos

--- a/contactanos.html
+++ b/contactanos.html
@@ -8,6 +8,7 @@
     <script src="cprueba.js" defer></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" href="./img/Logo.webp" type="image/x-icon">
 
 </head>
 <body>
@@ -15,13 +16,12 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="img/Logo.webp" alt="">
-            </div>
+                <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>            </div>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="./">Sobre nosotros</a></li>
                 <li><a href="#">Directorio de Emprendedores</a></li>
-                <li><a href="#">Promoción/Productores y Servicios</a></li>
+                <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
                 <li><a href="./faq.html">FAQ</a></li>
                 <li><a href="./contactanos.html">Contacto</a></li>
             </ul>
@@ -42,10 +42,10 @@
 
             <div class="contact-form">
                 <h3>ENVÍANOS UN MENSAJE</h3>
-                <input type="text" placeholder="Your Name">
-                <input type="email" placeholder="Your Email">
+                <input type="text" placeholder="Nombre">
+                <input type="email" placeholder="Correo">
                 <textarea placeholder="Mensaje"></textarea>
-                <button onclick="sendMessage()">Send Message</button>
+                <button onclick="sendMessage()">Enviar Mensaje</button>
             </div>
 
             <div class="contact-info">
