--- a/faq.html
+++ b/faq.html
@@ -7,18 +7,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/Logo.webp" type="image/x-icon">
     <title>Red De Apoyo Local</title>
 </head> 
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="/img/Logo.webp" alt="Logo">
-        </div>
+          <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>        </div>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="./">Sobre nosotros</a></li>
             <li><a href="#">Directorio de Emprendedores</a></li>
-            <li><a href="#">Promoción/Productores y Servicios</a></li>
+            <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
             <li><a href="./faq.html">FAQ</a></li>
             <li><a href="./contactanos.html">Contacto</a></li>
         </ul>
