--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nosotros</title>
     <link rel="stylesheet" href="SobreNosotros.css"> <!-- Aquí va el CSS externo -->
+    <link rel="icon" href="./img/Logo.webp" type="image/x-icon">
+
 </head>
 
 <body>
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <img src="img/Logo.webp" alt="Logo">
+            <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
         </div>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Sobre nosotros</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
             <li><a href="#">Directorio de Emprendedores</a></li>
-            <li><a href="#">Promoción/Productos y Servicios</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./contactanos.html">Contacto</a></li>
         </ul>
+    </nav>
     </nav>
 
     <!-- Sección de contenido principal -->
