--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./img/Logo.webp" type="image/x-icon">
     <title>Pagina inicio</title>
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="/img/Logo.webp" alt="Logo">
+            <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
         </div>
         <ul>
             <li><a href="index.html">Inicio</a></li>
