añadi las paginas de alex al menu y añadi estilos al menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
-            <li><a href="#">Directorio de Emprendedores</a></li>
+            <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
             <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
             <li><a href="./faq.html">FAQ</a></li>
             <li><a href="./contactanos.html">Contacto</a></li>
@@ -150,9 +150,11 @@
             <p class="register-tel">+57 311700430</p>
             <h2 class="title">Conéctate, Aprende y Crece</h2>
             <p class="register-text">Registrate en nuestra plataforma dando clic en el botón</p>
-            <button class="btn-register">
-                Registrate
-            </button>
+            <a href="./registro.html">
+                <button class="btn-register">
+                    Registrate
+                </button>
+            </a>
         </div>
     </section>
 
