--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
-            <li><a href="#">Directorio de Emprendedores</a></li>
+            <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
             <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
             <li><a href="./faq.html">FAQ</a></li>
             <li><a href="./contactanos.html">Contacto</a></li>
