--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="./">Sobre nosotros</a></li>
-            <li><a href="#">Directorio de Emprendedores</a></li>
+            <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
             <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
             <li><a href="./faq.html">FAQ</a></li>
             <li><a href="./contactanos.html">Contacto</a></li>
