arregle el carousel del index

--- a/index.html
+++ b/index.html
@@ -94,53 +94,55 @@
     <section class="testimonios">
         <h2 class="title">TESTIMONIOS DE EXITO</h2>
         <div class="testimonios-container">
-            <div class="carousel">
-                <button class="carousel-btn btn-left"> < </button>
-                <div class="carousel-container">
-                    <div class="carousel">
-                        <div class="carousel-item">
-                            <p>
-                                Como emprendedor, a veces es difícil darse a conocer, especialmente cuando no se cuenta con un local físico. Gracias a la Red de Apoyo al Pequeño Comerciante Local, pude mostrar mis productos de manualidades y decoración a muchas más personas. Después de registrarme, recibí numerosos mensajes de clientes interesados en mis creaciones, ¡y algunos incluso me hicieron pedidos personalizados! Esta plataforma ha sido una gran herramienta para llegar a más gente y hacer crecer mi pequeño negocio. ¡Mil gracias por esta oportunidad!
-                            </p>
-                            <div class="card">
-                                <img src="./img/card3.webp" alt="">
-                                <div class="card-info">
-                                    <p class="card-name"> Edwin Patiño</p>
-                                    <p class="card-title">Variedades Lula</div>
+            <section>
+                <div class="carousel-container" data-carousel>
+                    <ul class="flex" data-slides>
+                        <button class="btn btn-left"> < </button>
+                        <div class="slide" data-active>
+                            <div class="slide-info">
+                                <p>
+                                    Como emprendedor, a veces es difícil darse a conocer, especialmente cuando no se cuenta con un local físico. Gracias a la Red de Apoyo al Pequeño Comerciante Local, pude mostrar mis productos de manualidades y decoración a muchas más personas. Después de registrarme, recibí numerosos mensajes de clientes interesados en mis creaciones, ¡y algunos incluso me hicieron pedidos personalizados! Esta plataforma ha sido una gran herramienta para llegar a más gente y hacer crecer mi pequeño negocio. ¡Mil gracias por esta oportunidad!
+                                </p>
+                                <div class="profile">
+                                    <img src="./img/card3.webp" alt="Edwin Patiño">
+                                    <div>
+                                        <h3>Edwin Patiño</h3>
+                                        <p>Variedades Lula</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="carousel-item">
-                            <p>
-                                Cuando me enteré de la Red de Apoyo al Pequeño Comerciante Local, no dudé en registrarme. Los resultados han sido increíbles. En solo unas semanas, recibí varias llamadas y mensajes de personas interesadas en comprar mis productos orgánicos. Muchos de ellos me comentaron que me encontraron a través de la página web. Esto no solo me ayudó a mantener mi negocio a flote durante tiempos difíciles, sino que también me permitió conectarme con clientes que valoran la calidad y el esfuerzo que hay detrás de lo que hago. ¡Totalmente recomendado!
-                            </p>
-                            <div class="card">
-                                <img src="./img/card2.webp" alt="">
-                                <div class="card-info">
-                                    <p class="card-name">Carlos Méndez</p>
-                                    <p class="card-title"> Propietario de una tienda de productos orgánicos</p>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <p>
-                                Registrar mi panadería en la página web de la Red de Apoyo al Pequeño Comerciante Local fue una de las mejores decisiones que he tomado. Desde que aparecí en el directorio, muchas personas de mi comunidad se contactaron conmigo para pedir pan fresco y otros productos. ¡Incluso recibí pedidos de zonas cercanas que no conocían mi negocio! Esto me ayudó a aumentar mis ventas y a dar a conocer mi trabajo. Estoy muy agradecida por esta iniciativa que apoya a los pequeños comerciantes como yo.
-                            </p>
-                            <div class="card">
-                                <img src="./img/card3.webp" alt="">
-                                <div class="card-info">
-                                    <p class="card-name">María González</p>
-                                    <p class="card-title"> Propietario de una tienda de productos orgánicos</p>                                        
+                            <div class="slide-info">
+                                <p>
+                                    Cuando me enteré de la Red de Apoyo al Pequeño Comerciante Local, no dudé en registrarme. Los resultados han sido increíbles. En solo unas semanas, recibí varias llamadas y mensajes de personas interesadas en comprar mis productos orgánicos. Muchos de ellos me comentaron que me encontraron a través de la página web. Esto no solo me ayudó a mantener mi negocio a flote durante tiempos difíciles, sino que también me permitió conectarme con clientes que valoran la calidad y el esfuerzo que hay detrás de lo que hago. ¡Totalmente recomendado!
+                                </p>
+                                <div class="profile">
+                                    <img src="./img/card2.webp" alt="Edwin Patiño">
+                                    <div>
+                                        <h3>Carlos Méndez
+                                        </h3>
+                                        <p> 
+                                            Propietario de una tienda de productos orgánicos
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="slide-info">
+                                <p>
+                                    Registrar mi panadería en la página web de la Red de Apoyo al Pequeño Comerciante Local fue una de las mejores decisiones que he tomado. Desde que aparecí en el directorio, muchas personas de mi comunidad se contactaron conmigo para pedir pan fresco y otros productos. ¡Incluso recibí pedidos de zonas cercanas que no conocían mi negocio! Esto me ayudó a aumentar mis ventas y a dar a conocer mi trabajo. Estoy muy agradecida por esta iniciativa que apoya a los pequeños comerciantes como yo.
+                                </p>
+                                <div class="profile">
+                                    <img src="./img/card1.webp" alt="Maria Go">
+                                    <div>
+                                        <h3>María González</h3>
+                                        <p>Dueña de una panadería artesanal</p>
+                                    </div>
+                                </div>
+                            </div>
+                            
                         </div>
-                    </div>
-                </div>
-                <button class="carousel-btn btn-right"> > </button>
-            </div>
-            <div class="overlay"></div>
-
+                        <button class="btn btn-right"> > </button>
+                    </ul>
+                </div> 
         </div>
     </section>
 
