Update Colaboración y recursos.html
actualización ultima viernes 28-02-2025

--- a/Colaboración y recursos.html
+++ b/Colaboración y recursos.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colaboración y Recursos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Recursos.css">
 </head>
 
 <body>
-    <div class="logo">
-        <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
-    </div>
+        </div>
     <ul>
         <nav class="navbar">
         <a href="#" class="active">Inicio</a>
@@ -30,8 +28,8 @@
     </section>
 
     <div class="hero-image">
-        <img src="https://static.vecteezy.com/system/resources/previews/026/601/088/non_2x/teacher-icon-symbol-image-illustration-of-the-training-business-school-classroom-icon-design-image-vector.jpg" alt="Imagen principal">
-    </div>
+        <img src="https://static.vecteezy.com/system/resources/previews/026/601/088/non_2x/teacher-icon-symbol-image-illustration-of-the-training-business-school-classroom-icon-design-image-vector.jpg" alt="Imagen principal" > <br>
+            </div>
 
     <section class="sections">
         <div class="card">
@@ -60,7 +58,7 @@
         </div>
     </section>
 
-    <h2>📚 Material Educativo para Emprendedores</h2>
+    <h3>📚 Material Educativo para Emprendedores</h3>
 
     <ul>
         <li>📊 <strong>Guía para Emprendedores y Empresarios:</strong> <a href="https://www.colombiaproductiva.com/getattachment/287e8950-9bd2-4355-8c8c-8b917c772170/Guia-para-emprendedores-y-empresarios.aspx" target="_blank">Descargar PDF</a></li>
@@ -68,21 +66,21 @@
         <li>📘 <strong>El Manual del Emprendedor:</strong> <a href="https://economicas.unsa.edu.ar/afinan/informacion_general/book/ebooks/El%20manual%20del%20emprendedor%20La%20guia%20paso%20a%20paso%20para%20crear%20una%20gran%20empresa.pdf" target="_blank">Descargar PDF</a></li>
     </ul>
 
-    <h2>🎥 Videos para Fortalecer tu Negocio</h2>
+    <h3>🎥 Videos para Fortalecer tu Negocio</h3>
 
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Th2u4QF-A78" title="Consejos de Marketing para Emprendedores" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315"  src="https://www.youtube.com/embed/Th2u4QF-A78" title="Consejos de Marketing para Emprendedores" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" alt="imagen centrada" allowfullscreen></iframe>
     </div>
 
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/UBMYA0ZjtxU" title="Cómo Organizar las Finanzas de tu Negocio" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" center="auto" src="https://www.youtube.com/embed/UBMYA0ZjtxU" title="Cómo Organizar las Finanzas de tu Negocio" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/omkmajBLYXI" title="Habilidades Blandas para Emprendedores" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-    <h2>💰 Créditos para Pequeños Emprendimientos</h2>
+    <h3>💰 Créditos para Pequeños Emprendimientos</h3>
 
     <p>Descubre opciones de financiación diseñadas para impulsar tu emprendimiento. Estos programas ofrecen apoyo financiero a microempresas y negocios locales.</p>
 
@@ -97,7 +95,15 @@
     <a href="https://wa.me/" class="whatsapp">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="60">
     </a>
-
+    <footer>
+    <footer class="footer">
+        <div class="footer-container">
+            <p>Copyright © 2025 - Conexión Valle</p>
+            <p>Powered by Conexión Valle</p>
+        </div>
+    </footer>
 </body>
+<a href="https://wa.me/+573245772397" class="whatsapp-icon" target="_blank">
+    <img src="./img/whatshapIcon.jpeg" alt="WhatsApp">
 
 </html>
