añadi el dropdown menu y vincule pagina colaboracion y recursos

--- a/contactanos.html
+++ b/contactanos.html
@@ -16,12 +16,19 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>            </div>
+                <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
+            </div>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="./">Sobre nosotros</a></li>
+                <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
                 <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
-                <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
+                <li>
+                    <a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a>
+                    <div class="dropdown">
+                        <a href="./ColaboraciónRecursos.html">Colaboración y Recursos</a>
+                    </div>
+                </li>
+        
                 <li><a href="./faq.html">FAQ</a></li>
                 <li><a href="./contactanos.html">Contacto</a></li>
             </ul>
