--- a/faq.html
+++ b/faq.html
@@ -8,21 +8,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/Logo.webp" type="image/x-icon">
+    <link rel="icon" href="./img/Logo.webp" type="image/x-icon">
     <title>Red De Apoyo Local</title>
 </head> 
 <body>
-    <nav class="navbar">
-        <div class="logo">
-          <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>        </div>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="./">Sobre nosotros</a></li>
-            <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
-            <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
-            <li><a href="./faq.html">FAQ</a></li>
-            <li><a href="./contactanos.html">Contacto</a></li>
-        </ul>
-    </nav>
+  <nav class="navbar">
+    <div class="logo">
+        <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
+    </div>
+    <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
+        <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
+        <li>
+            <a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a>
+            <div class="dropdown">
+                <a href="./ColaboraciónRecursos.html">Colaboración y Recursos</a>
+            </div>
+        </li>
+
+        <li><a href="./faq.html">FAQ</a></li>
+        <li><a href="./contactanos.html">Contacto</a></li>
+    </ul>
+</nav>
+
     <H1>FAQ</H1><br>
     <H2>PREGUNTAS FRECUENTES</H2><br>
     <br>
