--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
             <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
-            <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
+            <li>
+                <a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a>
+                <div class="dropdown">
+                    <a href="./ColaboraciónRecursos.html">Colaboración y Recursos</a>
+                </div>
+            </li>
+
             <li><a href="./faq.html">FAQ</a></li>
             <li><a href="./contactanos.html">Contacto</a></li>
         </ul>
@@ -28,13 +34,13 @@
     <section class="hero">              
          <div class="hero-izq">
             <button class="btn-telefono">
-                +57 311700430
+                regístrate
             </button>
             <h2>
                 Impulsando el talento local: Conéctate, Aprende y Crece
             </h2>
             <button class="btn-unete">
-                Únete ahora
+                Inicio Sesión
             </button>
          </div>
          <div class="hero-right" >
