--- a/registro.html
+++ b/registro.html
@@ -8,24 +8,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./img/Logo.webp" type="image/x-icon">
     <script src="registro.js" defer></script>
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <img src="img/Logo.webp" alt="Logo">
+            <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
         </div>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
             <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
-            <li><a href="./PromocionDeServicios.html">Promoción/Productos y Servicios</a></li>
+            <li>
+                <a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a>
+                <div class="dropdown">
+                    <a href="./ColaboraciónRecursos.html">Colaboración y Recursos</a>
+                </div>
+            </li>
+
             <li><a href="./faq.html">FAQ</a></li>
             <li><a href="./contactanos.html">Contacto</a></li>
         </ul>
     </nav>
-
     <!-- Header -->
     <header class="main-header">
         <h1>EMPRENDEDORES VALLE DE ABURRÁ</h1>
