--- a/ColaboraciónRecursos.html
+++ b/ColaboraciónRecursos.html
@@ -8,26 +8,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./colaboracionRecursos.css">
+    <link rel="icon" href="./img/Logo.webp" type="image/x-icon">
     <title>Colaboración y Recursos</title>
 
 
 </head>
 
-<body>
+<body>        
+    <nav class="navbar">
+        <div class="logo">
+            <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
         </div>
-        <nav class="navbar">
-            <div class="logo">
-                <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
-            </div>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
-                <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
-                <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
-                <li><a href="./faq.html">FAQ</a></li>
-                <li><a href="./contactanos.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
+            <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
+            <li>
+                <a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a>
+                <div class="dropdown">
+                    <a href="./ColaboraciónRecursos.html">Colaboración y Recursos</a>
+                </div>
+            </li>
+    
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./contactanos.html">Contacto</a></li>
+        </ul>
+    </nav>
+    
     </header>
 
     <section class="hero">
