ultimos estilos a colaboracionRecursos y prueba del logo

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <!-- Hero -->
     <section class="hero">              
          <div class="hero-izq">
-            <button class="btn-telefono">
-                regístrate
+            <button class="btn-registrate">
+                <a href="./registro.html">Regístrate</a>
             </button>
             <h2>
                 Impulsando el talento local: Conéctate, Aprende y Crece
             </h2>
-            <button class="btn-unete">
+            <button class="btn-sesion">
                 Inicio Sesión
             </button>
          </div>
