--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -20,7 +20,13 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="./SobreNosotros.html">Sobre nosotros</a></li>
             <li><a href="./directorio.html">Directorio de Emprendedores</a></li>
-            <li><a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a></li>
+            <li>
+                <a href="./PromocionDeServicios.html">Promoción/Productores y Servicios</a>
+                <div class="dropdown">
+                    <a href="./ColaboraciónRecursos.html">Colaboración y Recursos</a>
+                </div>
+            </li>
+
             <li><a href="./faq.html">FAQ</a></li>
             <li><a href="./contactanos.html">Contacto</a></li>
         </ul>
