--- a/PromocionDeServicios.html
+++ b/PromocionDeServicios.html
@@ -15,7 +15,7 @@
     
     <nav class="navbar">
         <div class="logo">
-            <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
+            <a href="./index.html"><img src="img/Logo.webp" alt="Logo"></a>
         </div>
         <ul>
             <li><a href="index.html">Inicio</a></li>
