--- a/contactanos.html
+++ b/contactanos.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
+                <a href="./index.html"><img src="img/Logo.webp" alt="Logo"></a>
             </div>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
