--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-        <a href="./index.html"><img src="/img/Logo.webp" alt="Logo"></a>
+      <a href="./index.html"><img src="img/Logo.webp" alt="Logo"></a>
     </div>
     <ul>
         <li><a href="index.html">Inicio</a></li>
